--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <title>A Living Review of Quantum Computing for Plasma Physics</title>
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <style>
+  main {
+    max-width: 60em;
+    padding: 2em;
+    margin: 2em auto;
+  }
+  </style>
   <script
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js"
   type="text/javascript"></script>
